# ChangeLog for xfce-extra/xfce4-equake-plugin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-equake-plugin/ChangeLog,v 1.11 2015/04/12 19:01:03 mgorny Exp $

*xfce4-equake-plugin-1.3.6 (12 Apr 2015)

  12 Apr 2015; Michał Górny <mgorny@gentoo.org>
  +xfce4-equake-plugin-1.3.6.ebuild:
  Version bump with minor fixes.

*xfce4-equake-plugin-1.3.5 (18 Sep 2014)

  18 Sep 2014; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-equake-plugin-1.3.5.ebuild:
  Version bump.

  22 Apr 2014; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-equake-plugin-1.3.3.ebuild:
  old

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  xfce4-equake-plugin-1.3.4.ebuild:
  Stable for x86, wrt bug #507432

  20 Apr 2014; Agostino Sarubbo <ago@gentoo.org>
  xfce4-equake-plugin-1.3.4.ebuild:
  Stable for amd64, wrt bug #507432

*xfce4-equake-plugin-1.3.4 (31 Jan 2014)

  31 Jan 2014; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-equake-plugin-1.3.4.ebuild:
  Version bump.

  28 Jan 2014; Agostino Sarubbo <ago@gentoo.org>
  xfce4-equake-plugin-1.3.3.ebuild:
  Stable for x86, wrt bug #496018

  19 Jan 2014; Pacho Ramos <pacho@gentoo.org> xfce4-equake-plugin-1.3.3.ebuild:
  amd64 stable, bug 496018

  09 Oct 2013; Samuli Suominen <ssuominen@gentoo.org>
  -xfce4-equake-plugin-1.3.0.ebuild:
  old

*xfce4-equake-plugin-1.3.3 (09 Oct 2013)

  09 Oct 2013; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-equake-plugin-1.3.3.ebuild:
  Version bump; port from libxfcegui4 to libxfce4ui.

*xfce4-equake-plugin-1.3.0 (27 Jun 2013)

  27 Jun 2013; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-equake-plugin-1.3.0.ebuild:
  Initial commit.