@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-equake-plugin
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-equake-plugin/ChangeLog,v 1.11 2015/04/12 19:01:03 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-equake-plugin/ChangeLog,v 1.12 2015/05/17 15:22:58 mgorny Exp $
+
+*xfce4-equake-plugin-1.3.7 (17 May 2015)
+
+  17 May 2015; Michał Górny <mgorny@gentoo.org>
+  +xfce4-equake-plugin-1.3.7.ebuild:
+  Version bump with crash bugfix.
 
 *xfce4-equake-plugin-1.3.6 (12 Apr 2015)
 
